--- a/images/style.css
+++ b/images/style.css
@@ -1,47 +1,51 @@
+/* google fonts */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Yeseva+One&display=swap');
 
-
+body {
+    font-family: "Poppins", serif;
+}
+body h1,p {
+    margin: 0;
+}
 .half-width {
     width: 50%;
-    margin: 4% 5%;
 }
-.right-content img {
-    width: 100%;
-}
-.header-section {
+.container {
+    width: 80%;
     display: flex;
+    margin: 5% auto 0 auto;
 }
-.left-content h1 {
-    font-size: 10em;
-    padding-top: 8%;
-    padding-right: 5%;
-    padding-bottom: 2%;
-    padding-left: 5%;
-    border-left: 4px solid;
-    border-color: #FF5959;
-    border-width: 10px;
+/* Header section css */
+header img {
+    width: 80%;
 }
-.left-content p {
-    font-size: 4em;
+header .right-site {
+   text-align: center;
 }
-.left-content a {
-    font-size: 4em;
-    text-decoration: none;
-    color: white;
-    border: 4% solid #FF5959;
-    background-color: #FF5959;
-    padding: 2% 8%;
-    border-radius: 20px;
+.left-site {
+    display: flex;
+    flex-direction: column;
+     justify-content: center;
+     gap: 30px;
 }
-span {
+.left-site h1 {
+    font-family: 'yeseva one';
+    font-size: 60px;
+    font-weight: 400;
+    border-left: 4px solid #ff5959;
+    padding-left: 15px;
+}
+.left-site h1 span {
     color: #FFAD5A;
 }
-h1 {
-    font-size: 10em;
-    text-align: center;
+.left-site p {
+    font-size: 18px;
 }
-.images {
-    display: flex;
-}
-.pic-add-1 {
-    background-color: #FFF3EE;
+.button a {
+    background-color: #ff5959;
+    display: inline-block;
+    padding: 20px 70px;
+    color: white;
+    text-decoration: none;
+    border-radius: 10px;
 }
