--- a/images/style.css
+++ b/images/style.css
@@ -85,3 +85,33 @@ color: #FFAD5A;
 #item-3 {
     background-color: #fff4d6;
 }
+
+/* Developing section */
+.left {
+     text-align: center;
+}
+.left img {
+    width: 100%;
+}
+.right {
+    margin-left: 50px;
+    margin-top: 50px;
+    gap: 30px;
+}
+.right h1 {
+    font-size: 36px;
+}
+.right a {
+    text-decoration: none;
+    color: white;
+    background-color: #ff5959;
+    padding: 20px 50px;
+    border-radius: 15px;
+    display: inline-block;
+}
+.right p {
+    margin: 50px 0;
+}
+.left img .aa {
+    width: 30%
+}
