--- a/images/style.css
+++ b/images/style.css
@@ -1,5 +1,6 @@
 /* google fonts */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Yeseva+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Yeseva+One&display=swap');
+
 
 body {
     font-family: "Poppins", serif;
@@ -115,4 +116,19 @@ color: #FFAD5A;
 /* Community sectiion */
 .lining {
     flex-direction: row-reverse;
+}
+
+/* footer section */
+footer {
+    text-align: center;
+    background-color: black;
+    color: white;
+    padding: 20px 0;
+    font-size: 20px;
+}
+footer h3 {
+    font-family: "Lobster", serif;
+}
+footer h3 span {
+    color: #FFAD5A;
 }
