--- a/style.css
+++ b/style.css
@@ -118,10 +118,17 @@ color: #FFAD5A;
 .lining {
     flex-direction: row-reverse;
 }
-.margin {
-    margin-right: 0;
+.middle h1 {
+    text-align: center;
+    font-size: 50px;
+    padding-top: 30px;
 }
-
+.middle h1 span {
+    color: #FFAD5A;
+}
+.last-container {
+    margin-left: 300px;
+}
 /* footer section */
 footer {
     text-align: center;
