--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ color: #FFAD5A;
 }
 .right p {
     margin: 50px 0;
-    padding-right: 400px;
+    /* padding-right: 400px; */
 }
 /* Community sectiion */
 .lining {
@@ -126,9 +126,9 @@ color: #FFAD5A;
 .middle h1 span {
     color: #FFAD5A;
 }
-.last-container {
+/* .last-container {
     margin-left: 300px;
-}
+} */
 /* footer section */
 footer {
     text-align: center;
