--- a/style.css
+++ b/style.css
@@ -126,9 +126,9 @@ color: #FFAD5A;
 .middle h1 span {
     color: #FFAD5A;
 }
-/* .last-container {
+.last-container {
     margin-left: 300px;
-} */
+}
 /* footer section */
 footer {
     text-align: center;
