--- a/style.css
+++ b/style.css
@@ -118,6 +118,9 @@ color: #FFAD5A;
 .lining {
     flex-direction: row-reverse;
 }
+.last-container .left img {
+    width: auto;
+}
 .middle h1 {
     text-align: center;
     font-size: 50px;
