--- a/style.css
+++ b/style.css
@@ -112,11 +112,27 @@ color: #FFAD5A;
 }
 .right p {
     margin: 50px 0;
-    /* padding-right: 400px; */
+}
+.bgimg {
+    background-image: url(images/Shapes/shape-1.png);
+    background-repeat: no-repeat;
+    background-size: 20%;
+    background-position: left;
 }
 /* Community sectiion */
 .lining {
     flex-direction: row-reverse;
+    padding-bottom: 120px;
+}
+.last-image {
+    background-image: url(images/Shapes/shape-1.png);
+    background-repeat: no-repeat;
+    background-size: 15%;
+    background-position: bottom right;
+}
+/* Applicarion secrion */
+.last-container {
+    margin-bottom: 50px;
 }
 .last-container .left img {
     width: auto;
